--- a/html/public/plus_search.html
+++ b/html/public/plus_search.html
@@ -637,6 +637,19 @@
 					time = _this.find('.time').text().trim();
 				open_detail(guid, title, source, time);
 			});
+			
+			
+			
+//			mui.ajax('', {
+//				data: {},
+//				success: function(result){
+//					
+//				},
+//				error: function(){
+//					
+//				}
+//			});
+			
 		</script>
 	</body>
 
