--- a/html/scientistStory/index.html
+++ b/html/scientistStory/index.html
@@ -9,8 +9,294 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/imgList.css"/>
-	</head>
+		<style type="text/css">
+			.mui-content.mui-scroll-wrapper{
+				background-color:#ffffff;
+			}
+			.mui-table-view-cell>a:not(.mui-btn).mui-active{
+				background-color: #ffffff;
+			}
+			.mui-media .mui-media-body{
+				font-size: 1.4rem;
+				color:#333333;
+			}
+			.mui-media .mui-media-body .mui-ellipsis{
+				font-size: 1.3rem;
+				color:#999999;
+			}
+			.mui-media .mui-media-footer{
+				overflow: hidden;
+				padding-top: 10px;
+			}
+			.text-gray{
+				color:#666666;
+			}
+			.mui-media-footer .text-gray{
+				color:#333;
+				font-size: 1.3rem;
+			}
+			.mui-media-footer>img,
+			.mui-media-footer>video{
+				width: 100%;
+			}
+			video {
+            object-position: 0px 0px;
+            width: 100%;
+        }
 
+        .videoBox {
+            position: relative;
+            width: 100%;
+            height:200px;
+        }
+
+        .playBtn {
+        		width: 36px;
+        		height:36px;
+            position: absolute !important;
+            left: 50%;
+            top: 50%;
+            margin-left: -18px;
+            margin-top: -18px;
+            display: block;
+            border: none;
+            z-index: 1000;
+        }
+        .poster {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height:100%;
+            z-index: 1;
+        }
+        .mui-preview-image.mui-fullscreen {
+				position: fixed;
+				z-index: 20;
+				background-color: #000;
+			}
+			.mui-preview-header,
+			.mui-preview-footer {
+				position: absolute;
+				width: 100%;
+				left: 0;
+				z-index: 10;
+			}
+			.mui-preview-header {
+				height: 44px;
+				top: 0;
+			}
+			.mui-preview-footer {
+				height: 50px;
+				bottom: 0px;
+			}
+			.mui-preview-header .mui-preview-indicator {
+				display: block;
+				line-height: 25px;
+				color: #fff;
+				text-align: center;
+				margin: 15px auto 4;
+				width: 70px;
+				background-color: rgba(0, 0, 0, 0.4);
+				border-radius: 12px;
+				font-size: 16px;
+			}
+			.mui-preview-image {
+				display: none;
+				-webkit-animation-duration: 0.5s;
+				animation-duration: 0.5s;
+				-webkit-animation-fill-mode: both;
+				animation-fill-mode: both;
+			}
+			.mui-preview-image.mui-preview-in {
+				-webkit-animation-name: fadeIn;
+				animation-name: fadeIn;
+			}
+			.mui-preview-image.mui-preview-out {
+				background: none;
+				-webkit-animation-name: fadeOut;
+				animation-name: fadeOut;
+			}
+			.mui-preview-image.mui-preview-out .mui-preview-header,
+			.mui-preview-image.mui-preview-out .mui-preview-footer {
+				display: none;
+			}
+			.mui-zoom-scroller {
+				position: absolute;
+				display: -webkit-box;
+				display: -webkit-flex;
+				display: flex;
+				-webkit-box-align: center;
+				-webkit-align-items: center;
+				align-items: center;
+				-webkit-box-pack: center;
+				-webkit-justify-content: center;
+				justify-content: center;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				margin: 0;
+				-webkit-backface-visibility: hidden;
+			}
+			.mui-zoom {
+				-webkit-transform-style: preserve-3d;
+				transform-style: preserve-3d;
+			}
+			.mui-slider .mui-slider-group .mui-slider-item img {
+				width: auto;
+				height: auto;
+				max-width: 100%;
+				max-height: 100%;
+			}
+			.mui-android-4-1 .mui-slider .mui-slider-group .mui-slider-item img {
+				width: 100%;
+			}
+			.mui-android-4-1 .mui-slider.mui-preview-image .mui-slider-group .mui-slider-item {
+				display: inline-table;
+			}
+			.mui-android-4-1 .mui-slider.mui-preview-image .mui-zoom-scroller img {
+				display: table-cell;
+				vertical-align: middle;
+			}
+			.mui-preview-loading {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				display: none;
+			}
+			.mui-preview-loading.mui-active {
+				display: block;
+			}
+			.mui-preview-loading .mui-spinner-white {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				margin-left: -25px;
+				margin-top: -25px;
+				height: 50px;
+				width: 50px;
+			}
+			.mui-preview-image img.mui-transitioning {
+				-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
+				transition: transform 0.5s ease, opacity 0.5s ease;
+			}
+			@-webkit-keyframes fadeIn {
+				0% {
+					opacity: 0;
+				}
+				100% {
+					opacity: 1;
+				}
+			}
+			@keyframes fadeIn {
+				0% {
+					opacity: 0;
+				}
+				100% {
+					opacity: 1;
+				}
+			}
+			@-webkit-keyframes fadeOut {
+				0% {
+					opacity: 1;
+				}
+				100% {
+					opacity: 0;
+				}
+			}
+			@keyframes fadeOut {
+				0% {
+					opacity: 1;
+				}
+				100% {
+					opacity: 0;
+				}
+			}
+			img {
+				max-width: 100%;
+				height: auto;
+			}
+			.mui-status-bottom{
+				padding: 2px 0;
+			}
+			.mui-status-bottom:before,
+			.mui-status-bottom:after{
+				display: table;
+				content: " ";
+			}
+			.mui-status-bottom:after{
+				clear: both;
+			}
+			.mui-status-bottom .mui-status-item{
+				display: inline-block;
+				margin-right: 10px;
+				font-size: 11px;
+				color:#999999;
+			}
+			.mui-status-bottom .closeempty{
+				float: right;
+				font-size: 24px;
+				color:#dedede;
+			}
+			.mui-popover .remove-box{
+				padding: 10px 10px;
+			}
+			.remove-box .remove-title{
+				font-size: 13px;
+				color:#333333;
+			}
+			.remove-box .remove-item{
+				display: inline-block;
+				padding: 5px 8px;
+				margin-bottom: 10px;
+				font-size: 13px;
+				color:#999999;
+				transition: all .5s ease-in-out;
+			}
+			.remove-box .remove-item.active{
+				color:#ffffff;
+				background-color:#0062CC;
+				border-radius: 50px;
+			}
+			.imgBox{
+				margin-left:-5px;
+				margin-right:-5px;
+			}
+			.imgBox>div{
+				padding-left: 5px;
+				padding-right: 5px;
+			}
+			video,img{
+				background-color: #000;
+			}
+			.mui-media-footer img{
+				width: auto;
+				height: 8rem;
+			}
+			.mui-media-footer>img{
+				height:15rem;
+			}
+			.mui-media-footer>img{
+				width:100%;
+				height:
+			}
+			.mui-media-footer .imgBox{
+				text-align: center;
+			}
+			.mui-media-footer video{
+				height:100%;
+			}
+			.text-gray{
+				font-size:1.3rem;
+				line-height: 2rem;
+			}
+		</style>
+	</head>
 	<body>
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
@@ -28,7 +314,6 @@
 			var pageNum = 0,
 				pageSize = 10, 
 				downPageNum = 0;
-
 			mui.init({
 				pullRefresh: {
 					container: '#pullrefresh',
@@ -48,7 +333,7 @@
 			 */
 			function pulldownRefresh() {
 				downPageNum = 1;
-				getStoryList('before');								
+				getStoryList('before');	
 			}
 			var count = 0;
 			/**
@@ -120,8 +405,6 @@
 					},
 					error: function(xhr, type, errorThrown) {
 						plus.nativeUI.closeWaiting();
-						console.error(JSON.stringify(xhr))
-						console.error(type)
 					}
 				});
 			}
@@ -146,7 +429,6 @@
 						if(imgList && imgList.length > 0){
 							imgList = imgList.split(',');
 							var reduceList = list[i].reduce_image;
-							
 							if(reduceList){
 								reduceList = reduceList.split(',');
 							}
@@ -161,7 +443,7 @@
 								var imgSrc = (reduceList && reduceList.length > 0) ? reduceList[0] : imgLength[0]
 								_card += '<img src="' + imgSrc + '" data-preview-src="' + imgList[0] + '" data-preview-group="' + list[i].id + '"/>';
 							} else {
-								_card += '<div class="mui-row imgBox">';
+								_card += '<div class="mui-row imgBox mui-clearfix">';
 								for(var j = 0; j < imgLength; j++){
 									var imgSrc = (reduceList && reduceList.length > j) ? reduceList[j] : imgList[j];
 									_card += '<div class="' + className + '">' +
