--- a/html/scientistStory/index.html
+++ b/html/scientistStory/index.html
@@ -17,11 +17,11 @@
 				background-color: #ffffff;
 			}
 			.mui-media .mui-media-body{
-				font-size: 1.4rem;
+				font-size: 16px;
 				color:#333333;
 			}
 			.mui-media .mui-media-body .mui-ellipsis{
-				font-size: 1.3rem;
+				font-size: 16px;
 				color:#999999;
 			}
 			.mui-media .mui-media-footer{
@@ -33,7 +33,7 @@
 			}
 			.mui-media-footer .text-gray{
 				color:#333;
-				font-size: 1.3rem;
+				font-size: 17px;
 			}
 			.mui-media-footer>img,
 			.mui-media-footer>video{
