--- a/index.html
+++ b/index.html
@@ -221,8 +221,10 @@
 									var btnArray = ['取消','更新'];
 									mui.confirm(res1.note,res1.title,btnArray,function(e){
 										if (e.index == 1) {
-											var w = plus.webview.create(res1.url);
+											var w = plus.webview.create("html/update.html","",{top:"0px",bottom:"0px"});
 											w.show();
+											var wChild = plus.webview.create(res1.url,"",{top:"45px",bottom:"0px"});
+										 	w.append(wChild);
 //					                        var dtask = plus.downloader.createDownload(res1.url, {}, function(d, status) {
 //					                            if (status == 200) {                                        
 //					                                plus.nativeUI.toast("正在准备环境，请稍后！");
