--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -169,7 +169,7 @@
 				simulateLoading(0);
 				var guid = this.getAttribute('data-guid');
 				
-				if(guid == 'history' || guid == 'chat'){
+				if(guid == 'history' || guid == 'chat' || guid == 'myPublish'){
 					var state = JSON.parse(localStorage.getItem("$state"));
 					if(!state || !state.userId){
 						plus.nativeUI.toast('请先登录', {verticalAlign: "center"});
