--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -451,6 +451,7 @@
 				if(session && session.userId) {
 					param.user_id = session.userId;
 				}
+				console.log(JSON.stringify(param),"****");
 				mui.ajax('http://58.16.181.24:9203/mis-app/VisitingCard/articleType', {
 					data: param,
 					type: 'post', //HTTP请求类型
@@ -480,7 +481,7 @@
 					},
 					error: function(xhr, type, errorThrown) {
 						//异常处理；
-						console.error(xhr);
+						console.error(JSON.stringify(xhr),JSON.stringify(errorThrown),JSON.stringify("*"));
 						console.error(type);
 					}
 				});
