--- a/html/myCenter/myPublish.html
+++ b/html/myCenter/myPublish.html
@@ -371,7 +371,7 @@
 					"jdbcTemplateName": "mysqlTemplate",
 					"pFile": "ScienceStory",
 					"pKey": "containall",
-					"pageNo": requesNum,
+					"pageNo": pageNum,
 					"pageSize": pageSize,
 					"order": "",
 					"queryTermStr": "",
